tests/ui/impl-trait/in-trait/check-wf-on-non-defaulted-rpitit.stderr
error[E0277]: `impl Sized` cannot be sent between threads safely
  --> $DIR/check-wf-on-non-defaulted-rpitit.rs:6:17
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                 ^^^^^^^^^^^^^^^^^^^ `impl Sized` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `impl Sized`
note: required by a bound in `Wrapper`
  --> $DIR/check-wf-on-non-defaulted-rpitit.rs:3:19
   |
LL | struct Wrapper<G: Send>(G);
   |                   ^^^^ required by this bound in `Wrapper`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
